<resources>
    <string name="app_name">MusicApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Do you have an account ? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="app">App</string>
    <string name="usermail">nguyentrankhai123@gmail.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_setting">Setting</string>
    <string name="local_music">Local Music</string>
    <string name="online_music">Online music</string>
    <string name="music">Music</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="offline_music">Offline Music</string>
</resources>