<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_account"/>

        <item android:id="@+id/nav_setting"
            android:title="@string/nav_setting"
            android:icon="@drawable/ic_settings"/>
    </group>

    <item android:title="@string/music">
        <menu>

            <item android:id="@+id/local_music"
                android:title="@string/local_music"
                android:icon="@drawable/ic_local_music"/>

            <item android:id="@+id/online_music"
                android:title="@string/online_music"
                android:icon="@drawable/ic_online_music"/>
        </menu>
    </item>

</menu>